--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,5 +1,80 @@
 {
     "example": "ezampllelelel",
-    "login": "Ingresar"
+    "loginTitle": "Usuarios Registrados",
+    "loginSubtitle": "Bienvenido ¡Por favor ingrese sus datos!",
+    "languageSelector": "Cambio de idioma",
+    "login": "Ingresar",
+    "backButtonTitle": "Volver",
+    "noAccount": "¿Aun no estas registrado?",
+    "emailLabel": "Correo electrónico",
+    "emailPlaceholder": "su-email corporativo.com",
+    "passwordLabel": "Contraseña",
+    "changePassword": "Cambiar contraseña",
+    "rememberPassword": "Recordar contraseña",
+    "recoveryPassword": "Recuperar contraseña",
+    "save": "Guardar",
+    "cancel": "Cancelar",
+    "home": "Inicio",
+    "deposit": "Deposito",
+    "transfer": "Transferencia",
+    "wallet": "Billetera",
+    "swap": "Swap",
+    "countryLabel": "Pais",
+    "countryPlaceholder": "Seleccionar país",
+    "nameLabel": "Primer nombre",
+    "namePlaceholder": "Primer nombre",
+    "secondNameLabel": "Segundo nombre",
+    "secondNamePlaceholder": "Segundo nombre",
+    "surnameLabel": "Apellido",
+    "surnamePlaceholder": "Apellido",
+    "secondSurnameLabel": "Segundo apellido",
+    "secondSurnamePlaceholder": "Segundo apellido",
+    "documentLabel": "Documento de identidad",
+    "documentPlaceholder": "Documento de identidad",
+    "countryDocumentLabel": "Pais de emisión del documento",
+    "birthdateLabel": "Fecha de nacimiento",
+    "birthdatePlaceholder": "dd / mm / aaaa",
+    "phoneLabel": "Teléfono",
+    "phonePlaceholder": "Teléfono",
+    "acceptSMSLabel": "Acepta SMS?",
+    "divisorLabel": "Dirección",
+    "stateLabel": "Estado",
+    "cityLabel": "Ciudad",
+    "addressLabel1": "Dirección 1",
+    "addressPlaceholder1": "Dirección 1",
+    "addressLabel2": "Dirección 2",
+    "addressPlaceholder2": "Dirección 2",
+    "postalCodeLabel": "Código postal",
+    "documents": "Documentos",
+    "businessTitle": "EMPRESA - CARGA DE DOCUMENTOS",
+    "businessDocumentLabel": "Documentos constitutivo de la empresa",
+    "businessAddressLabel": "Comprobante de domicilio fiscal",
+    "filePlaceholder": "Seleccionar archivo",
+    "fileDescription": "Cargue el archivo del documento aquí (Formato admitido JPG, PNG o PDF)",
+    "messageImageSize": "El archivo supera los 4Mb.",
+    "shareholders": "Accionistas",
+    "shareholderTitle": "ACCIONISTAS - CARGA DE DOCUMENTOS",
+    "shareholderFileFrontLabel": "Anverso",
+    "shareholderFileBackLabel": "Reverso",
+    "shareholderAddressLabel": "Comprobante de domicilio fiscal",
+    "balance": "Mi saldo",
+    "profile": "Perfil",
+    "setting": "Ajustes",
+    "logOut": "Cerrar sesión",
+    "help": "Ayuda",
+    "companyData": "Datos de la empresa",
+    "edit": "Editar",
+    "businessNameLabel": "Nombre de la empresa",
+    "businessNamePlaceholder": "Razón social de la empresa",
+    "informationContact": "Informacion de contacto",
+    "backButtonText": "Volver",
+    "nextButtonText": "Continuar",
+    "titleInformationCompany": "Informacion Jurídica",
+    "warningAllFieldRequired": "Todos los campos son obligatorios",
+    "informationRegisterPartner": "*Solo para accionista con más de 25% de acciones.",
+    "titleViewRegisterPartner": "Accionistas",
+    "roleLabel": "Cargo dentro de la empresa",
+    "rolePlaceholder": "Cargo dentro de la empresa",
+    "partnerTitle": "Datos accionista"
    
 }
