cambios en depositos

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,8 +15,12 @@
     "documents": "Documents",
     "home": "Home",
     "deposit": "Deposit",
+    "selectCurrency": "Choose the type of",
+    "currency": "currency",
     "transfer": "Transfer",
     "wallet": "Wallet",
+    "fiatWallet":"Fiat Wallet",
+    "cryptoWallet": "Crypto wallet",
     "swap": "Swap",
     "save": "Save",
     "cancel": "Cancel",
