--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -16,8 +16,12 @@
     "cancel": "Cancelar",
     "home": "Inicio",
     "deposit": "Deposito",
+    "selectCurrency": "Seleccione el tipo de",
+    "currency": "moneda",
     "transfer": "Transferencia",
     "wallet": "Billetera",
+    "fiatWallet":"Billetera Fiat",
+    "cryptoWallet": "Billetera Cripto",
     "swap": "Swap",
     "countryLabel": "Pais",
     "countryPlaceholder": "Seleccionar país",
