--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -17,8 +17,11 @@
     "currency": "currency",
     "transfer": "Transfer",
     "wallet": "Wallet",
+    "createWallet": "Create wallet",
+    "walletAddress": "Wallet address",
     "fiatWallet":"Fiat Wallet",
     "cryptoWallet": "Crypto wallet",
+    "selectCrypto": "Select crypto",
     "search": "Search",
     "searchWallet": "Search crypto wallet",
     "newWallet": "Add new wallet address",
@@ -87,5 +90,6 @@
     "labelCurrentPassword": "Type your current password",
     "labelNewPassword": "New password",
     "labelConfirmNewPassword": "Confirm new password",
-    "withdraw": "Withdraw"
+    "withdraw": "Withdraw",
+    "done": "Done"
 }
