--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -17,6 +17,8 @@
     "currency": "moneda",
     "transfer": "Transferencia",
     "wallet": "Billetera",
+    "nameWallet": "Nombre de la Billetera",
+    "warningSendAsset": "Envíe solo {asset} a esta dirección de billetera. Cualquier otro tipo de activo enviado puede perderse y ser irrecuperable",
     "fiatWallet":"Billetera Fiat",
     "cryptoWallet": "Billetera Cripto",
     "selectCrypto": "Seleccione cripto",
@@ -24,6 +26,7 @@
     "createWallet": "Crear billetera",
     "searchWallet": "Buscar billetera cripto",
     "newWallet": "Agregar nueva dirección de billetera",
+    "walletAddress": "Dirección de billetera",
     "swap": "Intercambio",
     "countryLabel": "Pais",
     "countryPlaceholder": "Seleccionar país",
