--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -93,5 +93,12 @@
     "labelNewPassword": "New password",
     "labelConfirmNewPassword": "Confirm new password",
     "withdraw": "Withdraw",
-    "done": "Done"
+    "withdrawFiat": "Withdraw Fiat",
+    "withdrawCrypto": "Withdraw Crypto",
+    "done": "Done",
+    "internationalWire": "International Wire",
+    "domesticWire":"Domestic Wire",
+    "betweenNOBACrypto":"Between NOBA Crypto Wallets",
+    "otherPlatformCrypto":"To other Platforms Crypto Wallets",
+    "betweenNOBA": "Transfer Between NOBA Accounts"
 }
