cambios en withdraw

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -100,5 +100,7 @@
     "domesticWire":"Domestic Wire",
     "betweenNOBACrypto":"Between NOBA Crypto Wallets",
     "otherPlatformCrypto":"To other Platforms Crypto Wallets",
-    "betweenNOBA": "Transfer Between NOBA Accounts"
+    "betweenNOBA": "Transfer Between NOBA Accounts",
+    "withdrawFiatSelectMsg":"Select national wire (within the USA) or International (international banks)",
+    "withdrawCryptoSelectMsg":"Select Crypto Transfer Internal (within Noba) or External (Outside Noba)"
 }
