--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -102,7 +102,6 @@
     "otherPlatformCrypto":"A otras plataformas Crypto Wallets",
     "betweenNOBA": "Transferencia entre cuentas NOBA",
     "withdrawFiatSelectMsg":"Seleccione transferencia nacional (dentro de los EE. UU.) o internacional (bancos internacionales)",
-    "withdrawCryptoSelectMsg":"Seleccione Crypto Transfer Interno (dentro de Noba) o Externo (Fuera de Noba)"
-
+    "withdrawCryptoSelectMsg":"Seleccione Crypto Transfer Interno (dentro de Noba) o Externo (Fuera de Noba)",
     "statePlaceHolder": "Seleccionar estado"
 }
