--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -122,5 +122,6 @@
     "fullName": "Nombre completo",
     "somethingWentWrong": "Algo salio mal",
     "updatePasswordSuccessMessage": "Contrasena actualizada con exito",
-    "successfulOperation": "Operacion exitosa"
+    "successfulOperation": "Operacion exitosa",
+    "shareholderDataSuccessSend": "Datos de accionista enviados correctamente"
 }
