cambios en retiro

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -124,5 +124,6 @@
     "updatePasswordSuccessMessage": "Password successfully updated",
     "successfulOperation": "Successful operation",
     "whitdraw": "Whitdraw",
-    "shareholderDataSuccessSend": "Shareholder data sent correctly"
+    "shareholderDataSuccessSend": "Shareholder data sent correctly",
+    "continue": "Continue"
 }
