--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -124,5 +124,6 @@
     "updatePasswordSuccessMessage": "Contrasena actualizada con exito",
     "successfulOperation": "Operacion exitosa",
     "whitdraw": "Retirar",
-    "shareholderDataSuccessSend": "Datos de accionista enviados correctamente"
+    "shareholderDataSuccessSend": "Datos de accionista enviados correctamente",
+    "continue": "Continuar"
 }
