--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -136,5 +136,6 @@
     "youSendTo" : "You send to ",
     "fee": "Fee",
     "currentBalance": "Current balance",
-    "confirmWithdraw": "Confirm transaction withdraw"
+    "confirmWithdraw": "Confirm transaction withdraw",
+    "account": "Account"
 }
