--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -129,6 +129,7 @@
     "streetAddress": "Street Address (Apt, Suite, Etc.)",
     "saveNewPayee": "Save new payee",
     "newBeneficiary": "New Beneficiary",
+    "beneficiaryAddress": "Beneficiary Address",
     "docTypeLabelDriversLicense": "Driver License",
     "docTypeLabelGovernmentId": "GovernmentId",
     "docTypeLabelPassport": "Passport",
@@ -155,6 +156,6 @@
     "uploadFileDocumentCompanyText": "COMPANY - DOCUMENT UPLOAD",
     "uploadFileDocumentShareHolderText": "SHAREHOLDERS - DOCUMENT UPLOAD",
     "selectFile": "Select File",
-    "updateDocuments": "UPDATE DOCUMENTS"
-
+    "updateDocuments": "UPDATE DOCUMENTS",
+    "intermediaryBankAddress": "Intermediary bank address"
 }
