--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -129,6 +129,7 @@
     "streetAddress": "Dirección (apt, suite, etc.)",
     "saveNewPayee": "Guardar nuevo beneficiario",
     "newBeneficiary": "Nuevo Beneficiario",
+    "beneficiaryAddress": "Dirección del beneficiario",
     "docTypeLabelDriversLicense": "Licencia de conducir",
     "docTypeLabelGovernmentId": "Identificación del Gobierno",
     "docTypeLabelPassport": "Pasaporte",
@@ -155,5 +156,6 @@
     "uploadFileDocumentCompanyText": "EMPRESA - CARGA DE DOCUMENTOS",
     "uploadFileDocumentShareHolderText": "ACCIONISTAS - CARGA DE DOCUMENTOS",
     "selectFile": "Seleccione el archivo",
-    "updateDocuments": "ACTUALIZAR LOS DOCUMENTOS"
+    "updateDocuments": "ACTUALIZAR LOS DOCUMENTOS",
+    "intermediaryBankAddress": "Dirección del banco intermediario"
 }
