--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -158,5 +158,13 @@
     "selectFile": "Select File",
     "viewSwapHistory": "View Swap History",
     "iHave": "I Have",
-    "intermediaryBankAddress": "Intermediary bank address"
+    "intermediaryBankAddress": "Intermediary bank address",
+    "swapSuccessfulTitle": "Swap Successful",
+    "swapSuccessfulText": "The transaction has been processed successfully. The transfer may still be in process; check the transaction log later.",
+    "swapFrom": "from",
+    "swapTo": "to",
+    "swapPriceQuote": "Quote / Price",
+    "swapBackButtonTitle": "Back to swap", 
+    "swapExchangeServiceText": "Exchange services are available through third-party API providers"
+
 }
