--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -165,5 +165,6 @@
     "swapTo": "a",
     "swapPriceQuote": "Presupuesto / Precio",
     "swapBackButtonTitle": "Volver al intercambio", 
-    "swapExchangeServiceText": "Los servicios de intercambio están disponibles a través de proveedores de API de terceros"
+    "swapExchangeServiceText": "Los servicios de intercambio están disponibles a través de proveedores de API de terceros",
+    "reference": "Referencia"
 }
