--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -142,7 +142,7 @@
     "forgotPasswordTitle": "Recuperar contraseña",
     "forgotPasswordSubtitle": "Escribe tu correo electronico y recibirás un enlace para crear la contraseña nueva.",
     "forgotPasswordButton": "Enviar",
-    "alreadyAccount": "¿Ya tienes tu contraseña?",
+    "alreadyAccount": "¿Ya tienes tu cuenta?",
     "documentsPersonTitle": "Verificar los documentos",
     "documentsPersonText": "Vamos a comenzar con el proceso de carga de documentos para su verificación",
     "addNewShareHolder": "Añadir nuevo accionista",
