mejoras swap (ventas)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -178,5 +178,6 @@
     "reference": "Reference",
     "rememberMe": "Remember me",
     "swapHistory": "Swap History",
-    "iWant": "I want"
+    "iWant": "I want",
+    "insufficientFunds": "Insufficient funds"
 }
