[FIX] sending document to company.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -152,6 +152,7 @@
     "documentsCompanyCardTitle": "COMPANY - OWNERSHIP STRUCTURE",
     "documentTypePlaceHolder": "Choose document type",
     "utilityBillLabel": "Proof of fiscal domicile",
+    "companyIncorporationFile": "Documents of Incorporation of the company",
     "uploadFileText": "Upload the document file here (Supported format JPG, PNG or PDF)",
     "uploadFileDocumentCompanyText": "COMPANY - DOCUMENT UPLOAD",
     "uploadFileDocumentShareHolderText": "SHAREHOLDERS - DOCUMENT UPLOAD",
