--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -152,6 +152,7 @@
     "documentsCompanyCardTitle": "EMPRESA - ESTRUCTURA DE PROPIEDAD",
     "documentTypePlaceHolder": "Elija el tipo de documento",
     "utilityBillLabel": "Prueba de domicilio fiscal",
+    "companyIncorporationFile": "Documentos constitutivo de la empresa",
     "uploadFileText": "Suba el archivo del documento aquí (formato compatible JPG, PNG o PDF)",
     "uploadFileDocumentCompanyText": "EMPRESA - CARGA DE DOCUMENTOS",
     "uploadFileDocumentShareHolderText": "ACCIONISTAS - CARGA DE DOCUMENTOS",
