[FIX] Agregar variables de idioma
-. Cerrar sesion despues de 5min de inatividad.
-. Eliminado textos de The wire will take 24 hours

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -107,7 +107,9 @@
     "withdrawCryptoSelectMsg":"Select Crypto Transfer Internal (within Noba) or External (Outside Noba)",
     "depositAccountUSD":"Deposits in this account must be made in US Dollars",
     "depositAccountOther": "Deposits into this account can be made in currencies other than US dollars.",
-    "depositBankName":"Depository Bank Name",
+    "depositNameOnBank":"Name on Bank Account",
+    "bankName": "",
+    "helpTextDepositBankName": "Make sure it exactly as it appears on your bank account",
     "routingNumber": "Routing Number",
     "creditTo": "Credit To",
     "address": "Address",
@@ -126,8 +128,12 @@
     "shareholderDataSuccessSend": "Shareholder data sent correctly",
     "continue": "Continue",
     "addBeneficiaries": "Add Beneficiaries",
-    "streetAddress": "Street Address (Apt, Suite, Etc.)",
-    "saveNewPayee": "Save new payee",
+    "streetAddress": "Street Address",
+    "streetAddressTwo": "Street Address (Apt, Suite, Etc.)",
+    "intermediaryBankName": "Intermediary Bank Name",
+    "intermediaryRoutingNumber": "Intermediary Routing Number",
+    "intermediarySwiftCode": "Intermediary Swift Code",
+    "saveNewPayee": "Save new beneficiary",
     "newBeneficiary": "New Beneficiary",
     "beneficiaryAddress": "Beneficiary Address",
     "docTypeLabelDriversLicense": "Driver License",
