--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -107,11 +107,13 @@
     "withdrawCryptoSelectMsg":"Seleccione Crypto Transfer Interno (dentro de Noba) o Externo (Fuera de Noba)",
     "depositAccountUSD": "Los depósitos en esta cuenta deben ser realizados en Dólares Americanos",
     "depositAccountOther": "Los depósitos en esta cuenta podrán ser realizados desde otras monedas diferentes al dólar americano.",
-    "depositBankName":"Nombre del banco depositario",
+    "depositNameOnBank":"Nombre en la cuenta bancaria",
+    "helpTextDepositBankName": "Asegúrate de que sea exactamente como aparece en tu cuenta bancaria",
+    "bankName": "Nombre del banco",
     "routingNumber": "Número de ruta",
     "creditTo": "Crédito a",
     "address": "Dirección",
-    "accountNumber":"Numero de cuenta",
+    "accountNumber":"Número de cuenta",
     "bankAddress": "Dirección del banco",
     "bankPhone": "Teléfono del banco",
     "swiftCode": "Codigo Swift ",
@@ -126,8 +128,12 @@
     "shareholderDataSuccessSend": "Datos de accionista enviados correctamente",
     "continue": "Continuar",
     "addBeneficiaries": "Agregar beneficiarios",
-    "streetAddress": "Dirección (apt, suite, etc.)",
+    "streetAddress": "Dirección",
+    "streetAddressTwo": "Dirección (apt, suite, etc.)",
     "saveNewPayee": "Guardar nuevo beneficiario",
+    "intermediaryBankName": "Nombre del banco intermediario",
+    "intermediaryRoutingNumber": "Routing number intermediario",
+    "intermediarySwiftCode": "Swift Code intermediario",
     "newBeneficiary": "Nuevo Beneficiario",
     "beneficiaryAddress": "Dirección del beneficiario",
     "docTypeLabelDriversLicense": "Licencia de conducir",
