--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -195,5 +195,6 @@
     "documentProofOfAddress4": "Registro de vehículos",
     "documentProofOfAddress5": "Copia del Título de Propiedad Inmobiliaria",
     "documentProofOfAddress6": " Factura del Impuesto sobre la Propiedad",
-    "documentProofOfAddress7": "W2 u otro documento de declaración de impuestos"
+    "documentProofOfAddress7": "W2 u otro documento de declaración de impuestos", 
+    "naturalAccountTittle": "Información personal"
 }
